docs/CSS/under-construction.css
/* UNDER CONSTRUCTION PAGE STYLES */
/* FONT-FACE */
@font-face {
    font-family: 'Italiana';
    src: url('../Fonts/Italiana-Regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Sora';
    src: url('../Fonts/Sora-Regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Jost';
    src: url('../Fonts/Jost-Regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}
/* BRAND COLORS */
:root {
    --Coal: #262A2E;
    --Muted-mist: #ABBFB8;
    --Sage-green: #B9CBAF;
    --Sandstone: #F1EADA;
    --Sandstone50: #F1EADA80;
    --Eucalyptus: #3E5034;
    --Forest-roast: #40534C;
    --Cedar-molases: #693F0D;
    --Espresso: #251E0E;
    --Silver: #D2D6DA;
    --Silver50: #D9D9D980;

}

body.under-construction {
    background-color: var(--Sage-green);
    font-family: 'Sora', sans-serif;
    color: var(--Eucalyptus);
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    text-align: center;
}

.container {
    max-width: 800px;
    padding: 2rem;
}

h1 {
    font-family: 'Sora', sans-serif;
    font-size: 48px;
    margin-bottom: 1rem;
}

p {
    font-family: 'Jost', sans-serif;
    font-size: 20px;
    margin-bottom: 2rem;
}

.signature {
    font-family: 'Italiana';
    font-weight: 700;
    font-size: 40px;
    color: var(--Forest-roast);
}

.video-placeholder {
    margin-bottom: 1rem 0;
    width: 100%;
    max-width: 400px;
}

.video-placeholder video {
    max-width: 100%;
    border-radius: 12px;
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
}

